--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,7 +2,18 @@
 @tailwind components;
 @tailwind utilities;
 
-button[disabled], a[aria-disabled="true"], .disabled {
+button[disabled],
+a[aria-disabled="true"],
+.disabled {
    pointer-events: none;
-   opacity: .6;
+   opacity: 0.6;
+}
+
+.no-scrollbar::-webkit-scrollbar {
+   display: none;
+}
+
+.no-scrollbar {
+   -ms-overflow-style: none; /* IE and Edge */
+   scrollbar-width: none; /* Firefox */
 }
