--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -48,3 +48,23 @@ a[aria-disabled="true"],
       hsla(0, 0%, 100%, 0)
    );
 }
+
+
+.progress-line {
+   position: relative;
+   cursor: pointer;
+   width: 100%;
+   height: 4px;
+   border-radius: 99px;
+ }
+ 
+ .progress-line::before {
+   content: "";
+   position: absolute;
+   width: 100%;
+   height: 300%;
+   bottom: 100%;
+   left: 0;
+   transform: translateY(66%);
+ }
+ 
